--- a/help.html
+++ b/help.html
@@ -33,7 +33,7 @@
       <span id="open" onclick="openNav()">&#9776;</span>
         <a class="alg" href="#"><img class="logo" src="img/omizu-logo.jpg" alt="omizu logo"></a>
           <ul>
-            <li class="a"><a id="a" onclick="undone()" class="cu" href="#" style="background-color: #ff7d7d;">Home</a></li>
+            <li class="a"><a id="a" class="cu" href="index.html">Home</a></li>
             <li class="b"><a id="b" onclick="undone()" href="#" style="background-color: #ff7d7d;">About Us</a></li>
             <div class="drop">
                <button class="dropbtn">Product <i class="arrow down"></i></button>
@@ -49,7 +49,7 @@
                  <a href="chw.html">Cold Hot Wrap</a>
                </div>
             </div>
-            <li class="d"><a id="d" href="help.html">Help</a></li>
+            <li class="d"><a id="d" href="#">Help</a></li>
           </ul>
           <div id="msnav" class="">
             <span id="close" class="close" onclick="cNav()">&#10006;</span>
