--- a/aboutus.html
+++ b/aboutus.html
@@ -34,7 +34,7 @@
       <span id="open" onclick="openNav()">&#9776;</span>
         <a class="alg" href="#"><img class="logo" src="img/omizu-logo.jpg" alt="omizu logo"></a>
           <ul>
-            <li class="a"><a id="a" onclick="undone()" class="cu" href="#" style="background-color: #ff7d7d;">Home</a></li>
+            <li class="a"><a id="a" class="cu" href="index.htmlsw">Home</a></li>
             <li class="b"><a id="b" onclick="undone()" href="#" style="background-color: #ff7d7d;">About Us</a></li>
             <div class="drop">
                <button class="dropbtn">Product <i class="arrow down"></i></button>
