--- a/ht.html
+++ b/ht.html
@@ -34,13 +34,13 @@
       <span id="open" onclick="openNav()">&#9776;</span>
         <a class="alg" href="#"><img class="logo" src="img/omizu-logo.jpg" alt="omizu logo"></a>
           <ul>
-            <li class="a"><a id="a" onclick="undone()" class="cu" href="#" style="background-color: #ff7d7d;">Home</a></li>
+            <li class="a"><a id="a" class="cu" href="index.html">Home</a></li>
             <li class="b"><a id="b" onclick="undone()" href="#" style="background-color: #ff7d7d;">About Us</a></li>
             <div class="drop">
                <button class="dropbtn">Product <i class="arrow down"></i></button>
                <div class="drop-content">
                 <div class="dropp">
-                  <button class="homebtn"><a href="ht.html"><i class="arrow left"></i> Home Therapy</a></button>
+                  <button class="homebtn"><a href="#"><i class="arrow left"></i> Home Therapy</a></button>
                   <div class="home-content">
                     <a href="ch.html">Chinese Herbs</a>
                   </div>
