--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     </script>
     <meta name="google-site-verification" content="_uLg0q1l6xeYxQnNBS5SoouF6xTDTOJh5VqP0VUpKMw" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Omizu home therapy is our number 1 priority!</title>
+    <title>Omizu home therapy is our number 1 priority! | Official Website</title>
     <link rel="stylesheet" type="text/css" href="css/nav.css">
     <link rel="stylesheet" type="text/css" href="css/index.css">
     <meta name="Description" content="Health is our number one priority. We sell health care product to improve your life!">
-    <meta name="Keywords" content="Omizu Sdn Bhd, Omizu, health, health care, acupuncture, sauna, Malaysia">
+    <meta name="Keywords" content="Omizu Sdn Bhd, Omizu, health, health care, acupuncture, sauna, Malaysia, Omizu official website">
     <meta property="og:type" content="company">
     <meta property="og:image" content="https://omizu.com.my/img/logonew.png">
     <meta property="og:url" content="https://omizu.com.my">
