--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="sec1">
         <img src="img/omz_hm_desktop.jpg" alt="Top 3 products on Omizu">
         <h1>Home Therapy & Acupuncture</h1>
-        <p>Home Therapy</p>
+        <p>We sell home therapy products in Malaysia. <br>Mainly home therapy & Acupuncture but there's also some others products too! <br>Ours main focus is to improve everyone's life.</p>
         <button class="co" onclick="openProducts()">See all products</button>
     </div>
   </body>
