--- a/index.html
+++ b/index.html
@@ -77,10 +77,13 @@
 
   <body>
     <div class="sec1">
+      <div class="sec1_desktop">
         <img src="img/omz_hm_desktop.jpg" alt="Top 3 products on Omizu">
         <h1>Home Therapy & Acupuncture</h1>
         <p>We sell home therapy products in Malaysia. <br>Mainly home therapy & Acupuncture but there's also some others products too! <br>Ours main focus is to improve everyone's life.</p>
         <button class="co" onclick="openProducts()">See all products</button>
+      </div>
+      <img class="hm_mobile" src="img/omz_hm_mobile.jpg" alt="Top 3 products on Omizu">
     </div>
   </body>
 
