--- a/aboutus.html
+++ b/aboutus.html
@@ -12,6 +12,7 @@
 
        gtag('config', 'UA-170457967-1');
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The history of Omizu Sdn Bhd</title>
     <link rel="shortcut icon" href="favicon.ico">
@@ -29,10 +30,10 @@
     <meta name="twitter:title" content="The history of Omizu Sdn Bhd">
     <link rel="canonical" href="https://omizu.com.my/aboutus">
   </head>
-  <header>
+  <header class="trans navbar">
     <nav id="navbar">
-      <span id="open" onclick="openNav()">&#9776;</span>
-        <a class="alg" href="#"><img class="logo" src="img/omizu-logo.jpg" alt="omizu logo"></a>
+      <span id="open" class="openNav white" onclick="openNav()">&#9776;</span>
+        <a class="alg" href="#"><img class="logo" src="img/omizulogo.png" alt="omizu logo"></a>
           <ul>
             <li class="a"><a id="a" class="cu" href="index.htmlsw">Home</a></li>
             <li class="b"><a id="b" onclick="undone()" href="#" style="background-color: #ff7d7d;">About Us</a></li>
@@ -75,7 +76,18 @@
   </header>
 
   <body>
-
+    <div class="sec1">
+      <div class="wrapper">
+        <h1>About US</h1>
+        <p>Our story. How its built.</p>
+      </div>
+    </div>
+    <div class="sec2">
+      <h1>The history of Omizu.</h1>
+      <p>Omizu was established year on 2003, a company dedicated as health care professionals for providing health care productss that make a difference in the lives of our customers.With this purpose in mind, we arrived at our theme, "<strong>Health Is Job 1</strong>".</p>
+      <p>Due to limiting physiacal conditions, many people struggle with common daily tasks that become increasingly difficult. In these situations, quite often a good quality product will make ordinary tasks less difficult.</p>
+      <p>To assist you, we searched the health care products available in the market place and have carefully chosen unique, quality products that are safe and easy to use. We first grouped the products according to a diagnosis.</p>
+    </div>
   </body>
 
   <footer>
@@ -99,3 +111,4 @@
 </html>
 
 <script src="js/js.js"></script>
+<script src="js/aboutus.js"></script>
