--- a/help.html
+++ b/help.html
@@ -34,7 +34,7 @@
         <a class="alg" href="#"><img class="logo" src="img/omizu-logo.jpg" alt="omizu logo"></a>
           <ul>
             <li class="a"><a id="a" class="cu" href="index.html">Home</a></li>
-            <li class="b"><a id="b" onclick="undone()" href="#" style="background-color: #ff7d7d;">About Us</a></li>
+            <li class="b"><a id="b" href="aboutus.html">About Us</a></li>
             <div class="drop">
                <button class="dropbtn">Product <i class="arrow down"></i></button>
                <div class="drop-content">
