--- a/aboutus.html
+++ b/aboutus.html
@@ -35,8 +35,8 @@
       <span id="open" class="openNav white" onclick="openNav()">&#9776;</span>
         <a class="alg" href="#"><img class="logo" src="img/omizulogo.png" alt="omizu logo"></a>
           <ul>
-            <li class="a"><a id="a" class="cu" href="index.htmlsw">Home</a></li>
-            <li class="b"><a id="b" onclick="undone()" href="#" style="background-color: #ff7d7d;">About Us</a></li>
+            <li class="a"><a id="a" class="cu" href="index.html">Home</a></li>
+            <li class="b"><a id="b" href="#">About Us</a></li>
             <div class="drop">
                <button class="dropbtn">Product <i class="arrow down"></i></button>
                <div class="drop-content">
