--- a/ch.html
+++ b/ch.html
@@ -79,10 +79,10 @@
       <div class="sec1">
           <h1>Chinese Herbs</h1>
           <p>Chinese Herbs is a accessories for <a href="ht.html">Home Therapy</a>.</p>
-          <p class="par2">Now you can enjoy the healthy and relaxing action at home privacy of your own home sauna. Additionally, you can add proper bath herbs into streamer pot of your Home Sauna.</p>
-          <p class="par3">The fragrance essence of bath herbs will be absorbed by you skin capillary throught streamer stransmission after the steamer pot water becomes boiling.</p>
-          <p class="par4">The special treatment for your skin will renew your cells and take care of your skin. Using Home Sauna no doubt make you bright and healthy.</p>
-          <p class="par5">Various bath herbs have different efficacy, please add each bath herbs in when enjoying home sauna.</p>
+          <p class="par2">Now you can enjoy the healthy and relaxing action at home with privacy of your own home. Additionally, you can add proper bath herbs into steam pot of your Home Therapy.</p>
+          <p class="par3">The fragrance essence of bath herbs will be absorbed by you skin capillary throught streamer stransmission after the steam pot water start boiling.</p>
+          <p class="par4">The special treatment for your skin will renew your cells and take care of your skin. Using Home Therapy there's no doubt it make you bright and healthy.</p>
+          <p class="par5">Various bath herbs have different efficacy, please add bath herbs in steam pot when enjoying home sauna.</p>
           <img src="img/ch-min.jpg" alt="Chinese Herbs with packaging">
       </div>
       <div class="bk">
