--- a/aboutus.html
+++ b/aboutus.html
@@ -36,7 +36,7 @@
         <a class="alg" href="#"><img class="logo" src="img/omizulogo.png" alt="omizu logo"></a>
           <ul>
             <li class="a"><a id="a" class="cu" href="index.html">Home</a></li>
-            <li class="b"><a id="b" href="#">About Us</a></li>
+            <li class="b"><a id="b" class="au" href="#">About Us</a></li>
             <div class="drop">
                <button class="dropbtn">Product <i class="arrow down"></i></button>
                <div class="drop-content">
@@ -51,7 +51,7 @@
                  <a href="chw.html">Cold Hot Wrap</a>
                </div>
             </div>
-            <li class="d"><a id="d" href="help.html">Help</a></li>
+            <li class="d"><a id="d" class="hp" href="help.html">Help</a></li>
           </ul>
           <div id="msnav" class="">
             <span id="close" class="close" onclick="cNav()">&#10006;</span>
