--- a/chw.html
+++ b/chw.html
@@ -90,15 +90,15 @@
       </div>
       <div class="bk"></div>
       <div class="sec2">
-          <img src="img/chw-instruction1.png" alt="">
-          <img src="img/chw-instruction2.png" alt="">
-          <img src="img/chw-instruction3.png" alt="">
-          <h2>Cook it</h2>
-          <h2>Bend it</h2>
-          <h2>Use it</h2>
-          <p>Take the Cold Hot Wrap out of the package and bend the coin and you can put it into boiling water and cook it for [time] at [temperature]</p>
-          <p>After cooking it with boiling water bend the coin and it will start producing heat!</p>
-          <p>After all that you can start enjoying it!</p>
+          <img class="cook" src="img/chw-instruction1_8x.png" alt="">
+          <img class="bend" src="img/chw-instruction2-9536d330-2e10-11eb-9215-9221d4f8a690-becbe9ec-2e10-11eb-9215-9221d4f8a690.png" alt="">
+          <img class="enjoy" src="img/chw-instruction3-a9982658-2e10-11eb-9215-9221d4f8a690_auto_x2.jpg" alt="">
+          <h2 class="cook-h2">Cook it</h2>
+          <h2 class="bend-h2">Bend it</h2>
+          <h2 class="enjoy-h2">Use it</h2>
+          <p class="cook-p">Take the Cold Hot Wrap out of the package and bend the coin and you can put it into boiling water and cook it for [time] at [temperature]</p>
+          <p class="bend-p">After cooking it with boiling water bend the coin and it will start producing heat!</p>
+          <p class="enjoy-p">After all that you can start enjoying it!</p>
       </div>
       <div class="bk"></div>
       <div class="sec4">
